# CloudPoints

./: CMakeLists.txt  Rightventricle.txt  main.cpp  mainz.cpp  mainz3.cpp  pointDatas.txt  stdafx.h
ply/: adjacency_module.c  boundply.c  convertply.c  flipply.c  headply.c  normalsply.c  obj2ply.c  platoply.c  ply.c  ply.h  ply2iv.c  sphereply.c  xformply.c
